--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,78 +1,97 @@
-name: CI
+  name: CI
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  on:
+    push:
+      branches: [ main ]
+    pull_request:
+      branches: [ main ]
 
-env:
-  AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-  AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-  JWT_SECRET: ${{secrets.JWT_SECRET}}
-  JWT_REFRESH_SECRET: ${{secrets.JWT_REFRESH_SECRET}}
-  SPRING_PROFILES_ACTIVE: test
+  env:
+    AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+    AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+    JWT_SECRET: ${{secrets.JWT_SECRET}}
+    JWT_REFRESH_SECRET: ${{secrets.JWT_REFRESH_SECRET}}
+    SPRING_PROFILES_ACTIVE: test
+    GOOGLE_APPLICATION_CREDENTIALS: $HOME/gcp-key.json
 
-jobs:
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    environment: dev
+  jobs:
+    test:
+      name: Run Tests
+      runs-on: ubuntu-latest
+      environment: dev
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: '17'
+        - name: Set up JDK 17
+          uses: actions/setup-java@v3
+          with:
+            distribution: temurin
+            java-version: '17'
 
-      - name: Cache Gradle packages
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle
+        - name: Cache Gradle packages
+          uses: actions/cache@v3
+          with:
+            path: |
+              ~/.gradle/caches
+              ~/.gradle/wrapper
+            key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+            restore-keys: |
+              ${{ runner.os }}-gradle
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        - name: Grant execute permission for gradlew
+          run: chmod +x gradlew
 
-      - name: Run tests
-        run: ./gradlew test --no-daemon
+        - name: Set up Google Cloud credentials
+          run: echo '${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}' > $HOME/gcp-key.json
 
-  build:
-    name: Build Application
-    needs: test
-    runs-on: ubuntu-latest
-    environment: dev
+        - name: Set GOOGLE_APPLICATION_CREDENTIALS
+          run: echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json" >> $GITHUB_ENV
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+        - name: Authenticate to Google Cloud
+          run: gcloud auth activate-service-account --key-file=$HOME/gcp-key.json
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: '17'
+        - name: Run tests
+          run: ./gradlew test --no-daemon
 
-      - name: Cache Gradle packages
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle
+    build:
+      name: Build Application
+      needs: test
+      runs-on: ubuntu-latest
+      environment: dev
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v3
 
-      - name: Build application
-        run: ./gradlew build --no-daemon
+        - name: Set up JDK 17
+          uses: actions/setup-java@v3
+          with:
+            distribution: temurin
+            java-version: '17'
+
+        - name: Cache Gradle packages
+          uses: actions/cache@v3
+          with:
+            path: |
+              ~/.gradle/caches
+              ~/.gradle/wrapper
+            key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+            restore-keys: |
+              ${{ runner.os }}-gradle
+
+        - name: Grant execute permission for gradlew
+          run: chmod +x gradlew
+
+        - name: Set up Google Cloud credentials
+          run: echo '${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}' > $HOME/gcp-key.json
+
+        - name: Set GOOGLE_APPLICATION_CREDENTIALS
+          run: echo "GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json" >> $GITHUB_ENV
+
+        - name: Authenticate to Google Cloud
+          run: gcloud auth activate-service-account --key-file=$HOME/gcp-key.json
+
+        - name: Build application
+          run: ./gradlew build --no-daemon
